# rustcrypto-stream-ciphers-sgx

./: .drone.yml
aes-ctr/: Cargo.toml
aes-ctr/src/: lib.rs
aes-ctr/tests/: mod.rs
cfb-mode/: Cargo.toml
cfb-mode/tests/: mod.rs
cfb8/: Cargo.toml
cfb8/tests/: mod.rs
chacha20/: Cargo.toml
chacha20/tests/: mod.rs
ctr/: Cargo.toml
ctr/src/: lib.rs
ctr/tests/: mod.rs
hc-256/: Cargo.toml
hc-256/tests/: mod.rs
ofb/: Cargo.toml
ofb/tests/: mod.rs
salsa20/: Cargo.toml
salsa20-core/: Cargo.toml
salsa20/tests/: mod.rs
sgx/: Cargo.toml
sgx/stream-ciphers-sgx-test/: Makefile
sgx/stream-ciphers-sgx-test/app/: build.rs
sgx/stream-ciphers-sgx-test/enclave/: Cargo.toml
sgx/stream-ciphers-sgx-test/enclave/src/: aes_ctr_test  cfb8_test  cfb_mode_test  chacha20_test  ctr_test  hc_256_test  lib.rs  ofb_test  salsa20_test
