[package]
name = "cfb8"
version = "0.3.2"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
description = "Generic 8-bit Cipher Feedback (CFB8) mode implementation."
documentation = "https://docs.rs/cfb8"
repository = "https://github.com/RustCrypto/stream-ciphers"
keywords = ["crypto", "stream-cipher", "block-mode"]
categories = ["cryptography", "no-std"]

[dependencies]
stream-cipher = { git = "https://github.com/mesalock-linux/rustcrypto-traits-sgx" }
block-cipher-trait = { git = "https://github.com/mesalock-linux/rustcrypto-traits-sgx" }

[dev-dependencies]
#aes = "0.3"
#stream-cipher = { version = "0.3", features = ["dev"] }
#hex-literal = "0.1"

[badges]
travis-ci = { repository = "RustCrypto/stream-ciphers" }
