[package]
name = "ctr"
version = "0.3.2"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
description = "CTR block mode of operation"
documentation = "https://docs.rs/ctr"
repository = "https://github.com/RustCrypto/stream-ciphers"
keywords = ["crypto", "stream-cipher", "trait"]
categories = ["cryptography", "no-std"]

[dependencies]
stream-cipher = { git = "https://github.com/mesalock-linux/rustcrypto-traits-sgx" }
block-cipher-trait = { git = "https://github.com/mesalock-linux/rustcrypto-traits-sgx" }

[dev-dependencies]
#aes = "0.3"
#stream-cipher = { version = "0.3", features = ["dev"] }
#blobby = "0.1"

[badges]
travis-ci = { repository = "RustCrypto/stream-ciphers" }
