[package]
name = "Helloworldsampleenclave"
version = "1.0.0"
authors = ["Baidu"]

[lib]
name = "helloworldsampleenclave"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
aes-ctr = { path = "../../../aes-ctr" }
cfb8 = { path = "../../../cfb8" }
cfb-mode = { path = "../../../cfb-mode" }
chacha20 = { path = "../../../chacha20", features = ["xchacha20", "legacy", "zeroize"] }
ctr = { path = "../../../ctr" }
ofb = { path = "../../../ofb" }
salsa20 = { path = "../../../salsa20", feature = ["zeroize"] }
salsa20-core = { path = "../../../salsa20-core" }
hc-256 = { path = "../../../hc-256", feature = ["zeroize"] }
stream-cipher = { git = "https://github.com/mesalock-linux/rustcrypto-traits-sgx", features = ["dev"] }
aes = { git = "https://github.com/mesalock-linux/rustcrypto-block-ciphers-sgx" }
hex-literal = { git = "https://github.com/mesalock-linux/rustcrypto-utils-sgx" }
blobby = { git = "https://github.com/mesalock-linux/rustcrypto-utils-sgx" }
block-cipher-trait = { git = "https://github.com/mesalock-linux/rustcrypto-traits-sgx" }
generic-array = "0.13"

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { rev = "v1.1.1", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd = { rev = "v1.1.1", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tunittest = {rev = "v1.1.1", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
